--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,9 @@
 body {
   font-family: Palatino;
+  background: url(https://media-cdn.tripadvisor.com/media/photo-s/14/45/4c/13/sample-dish-from-nox.jpg);
+  background-position: 50px 50px;
+  background-repeat: no-repeat;
+  background-size: cover;
   background-color: black;
   color: white;
 
@@ -12,7 +16,7 @@ body {
 }
 
 .form-item {
-  margin-right: 1.8rem;
+  margin-right: 0.8rem;
 }
 
 label.primary {
@@ -35,9 +39,9 @@ button, input[type="submit"] {
 }
 
 .food-list-item {
-  margin: 0.5rem 0.5rem;
-  padding: 0.5rem 0.8rem;
-  border: 1px solid #20437c;
+  margin: 0.2rem 0.8rem;
+  padding: 0.2rem 0.8rem;
+  border: 1px solid black;
   border-radius: 5%;
-  background: #87ceeb;
+  background: black;
 }
